# python-ruckus-one

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/: README.md
.agents/memory/: python-ruckus-one-repository-memory.md
.cursor/: README.md
.cursor/memory/: README.md
.cursor/rules/: README.md  memory-bootstrap.mdc
.cursor/skills/: README.md
docs/: AGENTS.md  INDEX.md
ruckus_one/: __init__.py  auth.py  client.py  exceptions.py  logging_config.py
ruckus_one/resources/: __init__.py  activities.py  ap_groups.py  aps.py  base.py  dpsk_services.py  radius_server_profiles.py  venues.py  wifi_networks.py
tests/: __init__.py  conftest.py  test_activities.py  test_ap_groups.py  test_aps.py  test_auth.py  test_client.py  test_dpsk_services.py  test_radius_server_profiles.py  test_venues.py  test_wifi_networks.py
